# references

./: .gitignore  README.md
OneEuroFilter/: Makefile  说明.txt
OneEuroFilter/cc/: OneEuroFilter.cc
OneEuroFilter/py/: OneEuroFilter.py  OneEuroFilterComparator.py
android/jnicalljava/app/: build.gradle  proguard-rules.pro
android/jnicalljava/app/src/androidTest/java/com/example/caizb/jnicalljava/: ApplicationTest.java
android/jnicalljava/app/src/main/: AndroidManifest.xml
android/jnicalljava/app/src/main/java/com/example/caizb/jnicalljava/: MainActivity.java  jnicall.java
android/jnicalljava/app/src/main/jni/: jnicall.cpp  jnicalljava.cpp
android/jnicalljava/app/src/main/jni/include/: jnicall.h  jnicalljava.h
android/jnicalljava/app/src/main/jni/include/utility/: helpers.h
android/jnicalljava/app/src/main/jni/include/utility/jni/: jni.h  jni_class.h  jni_exception.h  jni_field.h  jni_log.h  jni_method.h  jni_ptr.cpp  jni_ptr.h  jni_resource.h  jni_resource_base.h.h  jni_string.h  jni_types.h  jni_utils.h
android/jnicalljava/app/src/main/res/layout/: activity_main.xml
android/jnicalljava/app/src/main/res/values/: strings.xml
android/jnicalljava/app/src/test/java/com/example/caizb/jnicalljava/: ExampleUnitTest.java
android/ndkdev/Sensor/: sensor.txt
cmake/demo/: CMakeLists.txt  build.properties  build.properties.local
cmake/demo/cmake/: internal_utils.cmake
cmake/demo/include/: module1.h
cmake/demo/src/: manager.cpp  module1.cpp  module2.cpp
cmake/demo/test/: CMakeLists.txt  main.cpp
cmake/demo3/: CMakeLists.txt  config.h  config.h.in
cmake/demo3/cmake/: internal_utils.cmake
cmake/demo3/include/: manager.h  module2.h
cmake/demo3/mylib/: CMakeLists.txt  mylib.cpp  mylib.h
cmake/demo3/output/lib/: demo.lib
cmake/demo3/src/: manager.cpp  module1.cpp  module2.cpp
cmake/demo3/test/: CMakeLists.txt  main.cpp
machine_learning/python_code/: 5.2.1.py  5.3.3.py  5.3.py  5.4.py  5.6.3.py
opencv/YUVReader/: YUVReader.sln
opencv/YUVReader/YUVReader/: YUVReader.vcxproj  main.cpp
opencv/bookstudy/opencv3_codeprj/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Calibration/: CMakeLists.txt  one_shot.txt
opencv/bookstudy/opencv3_codeprj/Calibration/src/: CalibRPY.cpp
opencv/bookstudy/opencv3_codeprj/Chapter5/24_14WaysToAccessPixel/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter5/24_14WaysToAccessPixel/src/: 24_14WaysToAccessPixel.cpp
opencv/bookstudy/opencv3_codeprj/Chapter5/25_ImageBlending/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter5/26_MultiChannelImageBlending/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter5/26_MultiChannelImageBlending/src/: 26_MultiChannelImageBlending.cpp
opencv/bookstudy/opencv3_codeprj/Chapter5/27_ChangeContrastAndBright/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter5/27_ChangeContrastAndBright/src/: 27_ChangeContrastAndBright.cpp
opencv/bookstudy/opencv3_codeprj/Chapter5/28_DFT/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter5/28_DFT/src/: 28_DFT.cpp
opencv/bookstudy/opencv3_codeprj/Chapter6/31_boxFilter/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter6/49_floodFill/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/Chapter6/49_floodFill/src/: 49_floodFill.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/BGR2YUV/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/MyTest/BGR2YUV/src/: bgr2yuv.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/Disparity/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/MyTest/Disparity/src/: test_disparity.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/LearnMatDefine/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/MyTest/LearnMatDefine/src/: test_learn_mat_define.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/Mp4Recorder/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/MyTest/Mp4Recorder/src/: mp4_recorder.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/PackJpegExport/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/MyTest/PackJpegExport/src/: jpeg_export.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/ResizeYUV420/: CMakeLists.txt
opencv/bookstudy/opencv3_codeprj/MyTest/ResizeYUV420/src/: resizeyuv420.cpp
opencv/bookstudy/opencv3_codeprj/MyTest/YUVReader/: CMakeLists.txt  camera_yuv30
opencv/bookstudy/opencv3_codeprj/MyTest/YUVReader/src/: YUVReader.cpp
opencv/bookstudy/opencv3_codeprj/src/: main.cpp
opengl/execise/: CMakeLists.txt
opengl/execise/firstproject/: CMakeLists.txt
opengl/execise/firstproject/src/: main.cpp
opengl/execise/hello_triangle/: CMakeLists.txt
opengl/execise/hello_triangle/src/: triangle.cpp
opengl/execise/prebuild/glad/include/glad/: glad.h
opengl/execise/prebuild/glad/src/: glad.c
opengl/execise/prebuild/glfw/lib/: glfw3.lib
opengl/execise/prebuild/glfw/lib/pkgconfig/: glfw3.pc
opengl/execise/prebuild/learnopengl/: shader.h
opengl/execise/prebuild/local_files/: 5.1.transform.fs  5.1.transform.vs
opengl/execise/shaders_uniform/: CMakeLists.txt
opengl/execise/shaders_uniform/src/: shaders_uniform.cpp
opengl/execise/textures_combined/: CMakeLists.txt
opengl/execise/textures_combined/src/: textures_combined.cpp  textures_combined.txt
opengl/execise/transformations/: CMakeLists.txt
opengl/execise/transformations/src/: transformations.cpp
python/: boxlayout.py  gridlayout.py  gridlayout2.py  inputdialog.py  mainwindow.py  menubar.py  openfiledialog.py
wrapper_jsoncpp/: CMakeLists.txt  main.cpp  wrapper_jsoncpp.cpp  wrapper_jsoncpp.h
wrapper_jsoncpp/tests/: mytest.json  test_redirect.json  test_redirect2.json  writetest.json
